--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,14 +5,14 @@ homepage: https://daehyeonnam.github.io
 repository: https://github.com/DaeHyeonNam/flutter_zoom_box
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
   flutter: ">=1.20.0 <2.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^4.3.1
-  vector_math: ^2.0.8
+  provider: any
+  vector_math: any
 
 dev_dependencies:
   flutter_test:
