--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: flutter_zoom_box
 description: A box that makes child widgets zoomable and draggable inside container like box.
-version: 0.1.2
-# homepage: https://daehyeonnam.github.io
-# repository: https://github.com/DaeHyeonNam/flutter_zoom_box
+version: 0.1.3
+homepage: https://daehyeonnam.github.io
+repository: https://github.com/DaeHyeonNam/flutter_zoom_box
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
